# qwebrtc

./: CMakeLists.txt  LICENSE.txt  build.py  build_webrtc.py  qwebrtc.cpp  qwebrtc.h  qwebrtc_global.h  qwebrtcconfiguration.hpp  qwebrtcdatachannel.cpp  qwebrtcdatachannel.hpp  qwebrtcdatachannel_p.hpp  qwebrtcdesktopvideosource.cpp  qwebrtcdesktopvideosource_p.hpp  qwebrtcicecandidate.cpp  qwebrtcicecandidate.hpp  qwebrtcmediastream.cpp  qwebrtcmediastream.hpp  qwebrtcmediastream_p.hpp  qwebrtcmediatrack.cpp  qwebrtcmediatrack.hpp  qwebrtcmediatrack_p.hpp  qwebrtcpeerconnection.cpp  qwebrtcpeerconnection.hpp  qwebrtcpeerconnection_p.hpp  qwebrtcpeerconnectionfactory.cpp  qwebrtcpeerconnectionfactory.hpp  qwebrtcquickvideoitem.cpp  qwebrtcquickvideoitem.hpp  qwebrtcquickvideoitem_p.hpp  qwebrtcsessiondescription.cpp  qwebrtcsessiondescription.hpp  qwebrtcsessiondescription_p.hpp  qwebrtctypes_p.hpp  qwebrtcutilities.cpp  qwebrtcutilities.hpp
